--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "isomorphic-unfetch": "^3.1.0",
     "lqip-modern": "^2.0.0",
     "next": "12",
+    "nextjs-google-analytics": "^2.3.7",
     "notion-client": "^6.15.6",
     "notion-types": "^6.15.6",
     "notion-utils": "^6.15.6",
